FIX: Page Titles' Spacing

--- a/Assets/css/address-book.css
+++ b/Assets/css/address-book.css
@@ -45,7 +45,12 @@
 }
 
 .ab-page-header h2 {
-    margin-top: 0;
+    margin-top: 5px;
+    font-weight: 600;
+}
+
+.ab-page-header h2.config-title {
+    margin-top: 10px;
     font-weight: 600;
 }
 
@@ -97,6 +102,8 @@ fieldset.ab-new-item .input-section, fieldset.ab-new-item .form-actions {
     transform: scale(1.7);
     display: inline-block;
     color: var(--pp-red-alt-3);
+    padding-top: 0;
+    padding-left: 3px;
 }
 
 .input-section .form-help, .modal-form-help {
